# Wrist-Wise

./: .gitignore  Dockerfile  README.md  SETUP.md  backend_server.py  docker-compose.yml  pyproject.toml  start.sh  tempCodeRunnerFile.py
env/: service.env
frontend/: analytics.js  index.html  script.js  styles.css
instance/: health_data.db
models/: record.py
routes/: analytics.py  count.py  health.py  router.py  upload.py
